@@ -100,7 +100,7 @@ TIFF_VER=4.0.10
 GIFLIB_VER=5.1.4
 YASM_VER=1.3.0
 
-LIBGPG_ERROR_VER=1.27
+LIBGPG_ERROR_VER=1.36
 LIBGCRYPT_VER=1.8.1
 OPENSSL_VER=1.0.2q
 OPENSSL_SUBVER=1.0.2
