@@ -10,6 +10,7 @@
   - LIBXSLT_VER from 1.1.29 to 1.1.33
   - EXPAT_VER from 2.2.5 to 2.2.6
   - TIFF_VER from 4.0.9 to 4.0.10
+  - LIBGPG_ERROR_VER from 1.27 to 1.36
 * Update in all configs:
   - GCC_EXTRA_VER from 8.2.0 to 8.3.0
   - LIBFCGI_VER from 2.4.0 to 2.4.2
